# show_beam_server

./: Cargo.toml  LICENSE  README.md
migrations/: 0001_shows_table.down.sql  0001_shows_table.up.sql  20230621170440_shows.down.sql  20230621170440_shows.up.sql  20230623202129_shows.up.sql  20230629221152_users.up.sql  20230709163039_shows.down.sql  20230709163039_shows.up.sql  20230709201918_users.up.sql  20230709203614_users.down.sql  20230709203614_users.up.sql  20230710212827_shows.down.sql  20230710212827_shows.up.sql  20230711195103_users.up.sql  20230714223801_favorites.up.sql  20230714231143_slides.down.sql  20230714231143_slides.up.sql  20230714234051_slides.up.sql  20230714234939_favorites.down.sql  20230714234939_favorites.up.sql  20230719175847_shows.up.sql  20230719181409_slides.down.sql  20230719181409_slides.up.sql  20230720200612_slides.up.sql  20230720200617_shows.up.sql  20230725171242_favorites.up.sql  20230821195002_add_indices_to_slides_table.down.sql  20230821195002_add_indices_to_slides_table.up.sql  20231121174128_init.down.sql  20231121174128_init.up.sql  20231129213609_slides.down.sql  20231129213609_slides.up.sql
src/: config.rs  controller.rs  main.rs
src/handlers/: auth.rs  favorites.rs  home.rs  mod.rs  shows.rs  slides.rs  users.rs
src/models/: app.rs  auth.rs  favorites.rs  mod.rs  shows.rs  slides.rs  users.rs
src/services/: authenticate_token.rs  github_auth.rs  mod.rs
src/tests/: init.rs  mod.rs  shows.rs
