[package]
name = "mark_slide_server"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-http = "3.3.1"
actix-service = "2.0.2"
actix-web = "4.3.1"
anyhow = "1.0.71"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
oauth2 = "4.4.1"
openssl = "0.10.55"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "mysql", "chrono", "uuid"] }
uuid = { version = "1.3.4", features = ["serde", "v4"] }
